# tg-ticket-provider

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  requirements.txt
.cursor/: english-single-line-docs.mdc
app/adapters/telegram/: __init__.py  message_gateway.py  states.py
app/domain/: __init__.py  entities.py  message_format.py
app/tickets/: __init__.py
app/tickets/adapters/: __init__.py
app/tickets/models/: __init__.py  db.py  message_format.py
app/tickets/repositories/: __init__.py  db.py  telegram.py
app/tickets/use_cases/: __init__.py  callback_payload.py  keyboards.py
app/use_cases/: __init__.py  keyboards.py  ports.py  ticket_workflow.py
config/: departments.example.yaml
core/app/: config.py
core/db/: __init__.py  db.py  models.py  utils.py
core/kpi/: __init__.py  factory.py  gsheets.py  noop.py  protocol.py
core/telegram/: __init__.py  markup_util.py
migrations/: env.py
migrations/versions/: 20260419_0001_initial.py  20260420_0002_uuid_tickets_abstract.py
tg_ticket_provider/: __init__.py  __main__.py  main.py
tg_ticket_provider/application/: __init__.py  keyboards.py  kpi_port.py  ports.py  ticket_workflow.py
tg_ticket_provider/config/: __init__.py  settings.py
tg_ticket_provider/domain/: __init__.py  entities.py  message_format.py
tg_ticket_provider/infrastructure/db/: __init__.py  db.py
tg_ticket_provider/infrastructure/kpi/: __init__.py  factory.py  gsheets.py  noop.py
tg_ticket_provider/infrastructure/persistence/: __init__.py  models.py  repository.py
(+16 files in other folders)
